Refactor LauncherLayoutController and TaskQueue for improved clarity and performance