@@ -114,7 +114,7 @@ public class TaskQueue {
         }
         running = true;
 
-        schedulerThread = new Thread(this::processTaskQueue);
+        schedulerThread = Thread.ofVirtual().unstarted(this::processTaskQueue);
         schedulerThread.setName("TaskQueue-" + profile.getName());
         schedulerThread.start();
     }
@@ -176,7 +176,7 @@ public class TaskQueue {
 
         LocalDateTime scheduledBefore = task.getScheduled();
         DTOTaskState taskState = createInitialTaskState(task);
-        boolean executionSuccessful = false;
+        boolean executionSuccessful;
 
         try {
             logInfoWithTask(task, "Starting task execution: " + task.getTaskName());
@@ -382,9 +382,8 @@ public class TaskQueue {
     private void acquireEmulatorSlot() {
         updateProfileStatus("Getting queue slot");
         try {
-            emuManager.adquireEmulatorSlot(profile, (thread, position) -> {
-                updateProfileStatus("Waiting for slot, position: " + position);
-            });
+            emuManager.adquireEmulatorSlot(profile, (thread, position) ->
+                    updateProfileStatus("Waiting for slot, position: " + position));
         } catch (InterruptedException e) {
             logError("Interrupted while acquiring emulator slot: " + e.getMessage());
             Thread.currentThread().interrupt();
@@ -404,9 +403,8 @@ public class TaskQueue {
             return;
         }
         try {
-            String timeFormatted = formatTimeUntil(delayUntil);
-            updateProfileStatus("Paused for " + timeFormatted);
-            logInfo("Profile is paused");
+            updateProfileStatus("PAUSED");
+            if (LocalDateTime.now().getSecond() % 10 == 0) logInfo("Profile is paused");
             Thread.sleep(1000); // Wait while paused
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
@@ -484,6 +482,7 @@ public class TaskQueue {
 
     private void runBackgroundChecks() {
         if (!emuManager.isRunning(profile.getEmulatorNumber()) || paused != LocalDateTime.MIN) {
+            logInfo("Emulator not running or queue is paused, not running background checks.");
             return; // emulator isn't running or the queue should be paused, just leave.
         }
         // help allies checks
@@ -496,9 +495,8 @@ public class TaskQueue {
         }
 
         try {
-            boolean finalRunHelpAllies = runHelpAllies; // Idk, my editor told me to do this. What's the point?
                 isBearRunning();
-                if (finalRunHelpAllies) checkHelpAllies();
+                if (runHelpAllies) checkHelpAllies();
         } catch (Exception e) {
             logError("Error running background tasks: " + e.getMessage());
         }
